[gd_scene load_steps=38 format=2]

[ext_resource path="res://Sprites/Pantalla de inicio opciones.png" type="Texture" id=1]
[ext_resource path="res://Almond Nougat.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Almond Nougat.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Interfaz.gd" type="Script" id=4]
[ext_resource path="res://Sprites/button opcions 4.png" type="Texture" id=5]
[ext_resource path="res://Sprites/button opcions 2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/button opcions 3.png" type="Texture" id=7]
[ext_resource path="res://Sprites/button opcions.png" type="Texture" id=8]
[ext_resource path="res://Sprites/1606783893994.png" type="Texture" id=10]
[ext_resource path="res://Sprites/A.png" type="Texture" id=12]
[ext_resource path="res://Sprites/S.png" type="Texture" id=13]
[ext_resource path="res://Sprites/barco_test.png" type="Texture" id=14]
[ext_resource path="res://Sprites/spr_barra_energia_marco.png" type="Texture" id=15]
[ext_resource path="res://Sprites/D.png" type="Texture" id=16]
[ext_resource path="res://Sprites/fondo de inicio.png" type="Texture" id=17]
[ext_resource path="res://Sprites/corazones.png" type="Texture" id=18]
[ext_resource path="res://Sprites/W.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Red_Amigos.png" type="Texture" id=20]
[ext_resource path="res://Sprites/basura (bote).png" type="Texture" id=21]
[ext_resource path="res://Sprites/keyboard.png" type="Texture" id=22]
[ext_resource path="res://Escenas/Prueba.tscn" type="PackedScene" id=23]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 30
outline_color = Color( 0.0941176, 0.529412, 0.678431, 1 )
font_data = ExtResource( 2 )

[sub_resource type="AnimatedTexture" id=2]
flags = 4
frames = 4
fps = 10.0
frame_0/texture = ExtResource( 8 )
frame_1/texture = ExtResource( 6 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 7 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 5 )
frame_3/delay_sec = 0.0

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 400, 128 )

[sub_resource type="DynamicFont" id=8]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 70
outline_size = 7
outline_color = Color( 0.415686, 0.886275, 0.921569, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=11]
size = 40
outline_size = 7
outline_color = Color( 0.415686, 0.67451, 0.921569, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 30
outline_size = 4
outline_color = Color( 0.415686, 0.67451, 0.921569, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 30
outline_size = 4
outline_color = Color( 0.858824, 0.129412, 0.129412, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=14]
size = 70
outline_size = 5
outline_color = Color( 0.415686, 0.886275, 0.921569, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=15]
size = 30
outline_size = 4
outline_color = Color( 0.415686, 0.67451, 0.921569, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=16]
size = 30
outline_size = 4
outline_color = Color( 0.858824, 0.129412, 0.129412, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=17]
size = 30
outline_size = 4
outline_color = Color( 0.415686, 0.67451, 0.921569, 1 )
font_data = ExtResource( 3 )

[node name="Interfaz" type="CanvasLayer"]
script = ExtResource( 4 )
scn_game = ExtResource( 23 )

[node name="FondoMenu" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.346921
margin_top = 1.68179
margin_right = -0.346924
margin_bottom = 1.68176
texture = ExtResource( 17 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="FondoMenu"]
margin_left = 819.488
margin_top = 85.2758
margin_right = 1259.49
margin_bottom = 338.276
texture = ExtResource( 14 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="Label" parent="."]
margin_left = 329.406
margin_top = 66.5448
margin_right = 813.406
margin_bottom = 167.545
custom_fonts/font = SubResource( 1 )
text = "Operacion Vela"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonOpciones" type="TextureButton" parent="."]
margin_left = 681.409
margin_top = 331.091
margin_right = 974.409
margin_bottom = 610.091
texture_normal = ExtResource( 8 )
texture_hover = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opciones" type="Label" parent="."]
margin_left = 723.132
margin_top = 464.133
margin_right = 942.132
margin_bottom = 545.133
custom_fonts/font = SubResource( 3 )
text = "Opciones"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonStart" type="TextureButton" parent="."]
margin_left = 234.053
margin_top = 329.409
margin_right = 527.053
margin_bottom = 608.409
texture_normal = ExtResource( 8 )
texture_hover = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jugar" type="Label" parent="."]
margin_left = 315.999
margin_top = 471.222
margin_right = 452.999
margin_bottom = 542.222
custom_fonts/font = SubResource( 4 )
text = "Jugar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonSalir" type="TextureButton" parent="."]
margin_left = 0.16394
margin_top = 8.72983
margin_right = 127.164
margin_bottom = 132.73
texture_normal = ExtResource( 8 )
texture_hover = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Salir" type="Label" parent="."]
margin_left = 36.3303
margin_top = 68.3168
margin_right = 95.3303
margin_bottom = 109.317
custom_fonts/font = SubResource( 5 )
text = "Salir"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FondoOpciones" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -576.0
margin_top = -336.0
margin_right = 576.0
margin_bottom = 336.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonAtras" type="TextureButton" parent="."]
visible = false
margin_left = 21.0908
margin_top = 528.636
margin_right = 161.091
margin_bottom = 662.636
texture_normal = ExtResource( 8 )
texture_hover = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Atras" type="Label" parent="."]
visible = false
margin_left = 24.7861
margin_top = 576.588
margin_right = 158.786
margin_bottom = 647.588
custom_fonts/font = SubResource( 6 )
text = "Atras"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonComoJugar" type="Button" parent="."]
visible = false
margin_left = 387.879
margin_top = 52.8808
margin_right = 757.879
margin_bottom = 206.881
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.027451, 0.278431, 0.482353, 1 )
text = "Como jugar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controles" type="Label" parent="."]
visible = false
margin_left = 14.2179
margin_top = 18.3776
margin_right = 227.218
margin_bottom = 89.3776
custom_fonts/font = SubResource( 10 )
text = "Controles"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="TextureRect" parent="Controles"]
margin_left = 225.112
margin_top = -18.2245
margin_right = 327.112
margin_bottom = 83.7755
texture = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="W" type="TextureRect" parent="Controles"]
margin_left = 4.37361
margin_top = 90.1192
margin_right = 75.3736
margin_bottom = 165.119
texture = ExtResource( 19 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A" type="TextureRect" parent="Controles"]
margin_left = 4.37361
margin_top = 175.426
margin_right = 75.3736
margin_bottom = 250.426
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S" type="TextureRect" parent="Controles"]
margin_left = 6.61852
margin_top = 265.223
margin_right = 77.6185
margin_bottom = 340.223
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="D" type="TextureRect" parent="Controles"]
margin_left = 4.37361
margin_top = 355.02
margin_right = 75.3736
margin_bottom = 430.02
texture = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Barra" type="TextureRect" parent="Controles"]
margin_left = 4.0
margin_top = 452.0
margin_right = 255.0
margin_bottom = 511.0
texture = ExtResource( 15 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Controles"]
margin_left = 93.9455
margin_top = 102.436
margin_right = 343.946
margin_bottom = 153.436
custom_fonts/font = SubResource( 11 )
text = "Rotar hacia Arriba"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Controles"]
margin_left = 92.8975
margin_top = 184.402
margin_right = 363.898
margin_bottom = 235.402
custom_fonts/font = SubResource( 11 )
text = "Moverse hacia Atras"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Controles"]
margin_left = 85.4791
margin_top = 275.116
margin_right = 335.48
margin_bottom = 326.116
custom_fonts/font = SubResource( 11 )
text = "Rotar hacia Abajo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Controles"]
margin_left = 89.1885
margin_top = 364.782
margin_right = 398.189
margin_bottom = 415.782
custom_fonts/font = SubResource( 11 )
text = "Moverse hacia Adelante"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Controles"]
margin_left = 259.632
margin_top = 454.214
margin_right = 364.632
margin_bottom = 505.214
custom_fonts/font = SubResource( 11 )
text = "Atacar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -547.0
color = Color( 0.764706, 0.752941, 0.752941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vida" type="Label" parent="."]
visible = false
margin_left = 922.757
margin_top = 13.7237
margin_right = 1133.76
margin_bottom = 84.7237
custom_fonts/font = SubResource( 10 )
text = "Salud"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vidas" type="TextureRect" parent="Vida"]
margin_left = 107.076
margin_top = -20.3828
margin_right = 235.076
margin_bottom = 107.617
texture = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Vida"]
margin_left = -197.691
margin_top = 80.8284
margin_right = 218.309
margin_bottom = 111.828
custom_fonts/font = SubResource( 12 )
text = "Cuentas con                     de vida o "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Vida/Label"]
margin_left = 133.258
margin_top = 0.220398
margin_right = 247.258
margin_bottom = 31.2204
custom_fonts/font = SubResource( 13 )
text = "3 corazones"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Vida/Label"]
margin_left = 368.0
margin_top = 2.0
margin_right = 416.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 13 )
text = "6 HP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Basura" type="Label" parent="."]
visible = false
margin_left = 881.435
margin_top = 191.364
margin_right = 1137.44
margin_bottom = 267.364
custom_fonts/font = SubResource( 14 )
text = "Basura"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Basuras" type="TextureRect" parent="Basura"]
margin_left = 131.853
margin_top = -30.2905
margin_right = 277.853
margin_bottom = 106.709
texture = ExtResource( 21 )
expand = true

[node name="Label" type="Label" parent="Basura"]
margin_left = -265.0
margin_top = 89.0
margin_right = 263.0
margin_bottom = 222.0
custom_fonts/font = SubResource( 15 )
text = "       Esquiva la basura para evitar perder vida.

Si eres golpeado por la basura perderas
                              "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Basura/Label"]
margin_left = 407.54
margin_top = 70.4205
margin_right = 520.54
margin_bottom = 101.42
custom_fonts/font = SubResource( 16 )
text = "1/2 Corazon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Amigos" type="Label" parent="."]
visible = false
margin_left = 865.818
margin_top = 465.492
margin_right = 1130.82
margin_bottom = 536.492
custom_fonts/font = SubResource( 10 )
text = "Amigos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Amigo" type="TextureRect" parent="Amigos"]
margin_left = 182.682
margin_top = -6.13608
margin_right = 275.682
margin_bottom = 81.8639
texture = ExtResource( 20 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Amigos"]
margin_left = -103.0
margin_top = 98.0
margin_right = 274.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 17 )
text = "Golpea la rede para romperla, liberar 
a tus amigos "
[connection signal="pressed" from="BotonOpciones" to="." method="_on_BotonOpciones_pressed"]
[connection signal="pressed" from="BotonStart" to="." method="_on_BotonStart_pressed"]
[connection signal="pressed" from="BotonSalir" to="." method="_on_BotonSalir_pressed"]
[connection signal="pressed" from="BotonAtras" to="." method="_on_BotonAtras_pressed"]
[connection signal="pressed" from="BotonComoJugar" to="." method="_on_BotonComoJugar_pressed"]
